--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "primeng": "^5.2.0-rc.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
